--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "24.0.0",
     "vite": "^4.2.0",
+    "vite-plugin-resolve": "^2.3.0",
     "vue": "^3.2.47"
   }
 }
