--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "electron-vue",
   "private": true,
   "version": "0.0.1",
+  "description": "A Vue.js project",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -10,6 +11,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "24.0.0",
+    "electron-builder": "^23.6.0",
     "vite": "^4.2.0",
     "vite-plugin-resolve": "^2.3.0",
     "vue": "^3.2.47"
